--- a/plugin.xml
+++ b/plugin.xml
@@ -78,5 +78,32 @@ In case everything miserably fails and you can't build your project, you might n
         <source-file src="src/ios/AsyncImageView.m" />
         <source-file src="src/ios/CDVAnnotation.m" />
         <source-file src="src/ios/MapKit.m" />
+        <source-file src="src/ios/cluster/CCHCenterOfMassMapClusterer.h" />
+        <source-file src="src/ios/cluster/CCHCenterOfMassMapClusterer.m" />
+        <source-file src="src/ios/cluster/CCHFadeInOutMapAnimator.h" />
+        <source-file src="src/ios/cluster/CCHFadeInOutMapAnimator.m" />
+        <source-file src="src/ios/cluster/CCHMapAnimator.h" />
+        <source-file src="src/ios/cluster/CCHMapClusterAnnotation.h" />
+        <source-file src="src/ios/cluster/CCHMapClusterAnnotation.m" />
+        <source-file src="src/ios/cluster/CCHMapClusterController.h" />
+        <source-file src="src/ios/cluster/CCHMapClusterController.m" />
+        <source-file src="src/ios/cluster/CCHMapClusterControllerDebugPolygon.h" />
+        <source-file src="src/ios/cluster/CCHMapClusterControllerDebugPolygon.m" />
+        <source-file src="src/ios/cluster/CCHMapClusterControllerDelegate.h" />
+        <source-file src="src/ios/cluster/CCHMapClusterControllerUtils.h" />
+        <source-file src="src/ios/cluster/CCHMapClusterControllerUtils.m" />
+        <source-file src="src/ios/cluster/CCHMapClusterOperation.h" />
+        <source-file src="src/ios/cluster/CCHMapClusterOperation.m" />
+        <source-file src="src/ios/cluster/CCHMapClusterer.h" />
+        <source-file src="src/ios/cluster/CCHMapTree.h" />
+        <source-file src="src/ios/cluster/CCHMapTree.m" />
+        <source-file src="src/ios/cluster/CCHMapTreeUtils.h" />
+        <source-file src="src/ios/cluster/CCHMapTreeUtils.m" />
+        <source-file src="src/ios/cluster/CCHMapViewDelegateProxy.h" />
+        <source-file src="src/ios/cluster/CCHMapViewDelegateProxy.m" />
+        <source-file src="src/ios/cluster/CCHNearCenterMapClusterer.h" />
+        <source-file src="src/ios/cluster/CCHNearCenterMapClusterer.m" />
+        <source-file src="src/ios/cluster/ClusterAnnotationView.h" />
+        <source-file src="src/ios/cluster/ClusterAnnotationView.m" />
     </platform>
 </plugin>
